# bodymovin-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: shapes.rs
src/: lib.rs  util.rs
src/effects/: angle.rs  check_box.rs  color.rs  custom_value.rs  drop_down.rs  fill.rs  group.rs  index.rs  layer.rs  mod.rs  no_value.rs  point.rs  pro_levels.rs  slider.rs  stroke.rs  tint.rs  tritone.rs
src/helpers/: blend_mode.rs  composite.rs  line_cap.rs  line_join.rs  mask.rs  mod.rs  text_based.rs  text_grouping.rs  text_shape.rs  transform.rs
src/layers/: image.rs  layer.rs  mod.rs  null.rs  pre_comp.rs  shape.rs  solid.rs  text.rs
src/properties/: double_keyframe.rs  mod.rs  multi_dimensional.rs  multi_dimensional_keyframed.rs  offset_keyframe.rs  scalar.rs  shape.rs  shape_keyframed.rs  shape_prop.rs  shape_prop_keyframe.rs  value.rs  value_keyframe.rs  value_keyframed.rs
src/shapes/: ellipse.rs  fill.rs  gradient_fill.rs  gradient_stroke.rs  group.rs  merge.rs  mod.rs  rect.rs  repeater.rs  rounded_corners.rs  shape.rs  star.rs  stroke.rs  transform.rs  trim.rs
src/sources/: chars.rs  image.rs  mod.rs  pre_comp.rs
tests/: load.rs  shapes.json  shapes.rs
tests/data/: 4thofjuly2018.json  flying_text.json  lottie_gatin.json  underline.json
tests/snapshots/: load__4thofjuly2018.snap  load__flying_text.snap  load__lottie_adrock.snap  load__lottie_bodymovin.snap  load__lottie_gatin.snap  load__lottie_happy2016.snap  load__shapes.snap  load__underline.snap  shapes__shapes.snap
