[package]
name = "bodymovin"
version = "0.1.0"
authors = ["Brainium Studios LLC"]
edition = "2018"
description = "Parse JSON data exported by Bodymovin"
documentation = "https://docs.rs/bodymovin"
repository = "https://github.com/BrainiumLLC/bodymovin-rs"
readme = "README.md"
license = "Apache-2.0/MIT"

[dependencies]
log = "0.4.13"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
serde_repr = "0.1.6"
thiserror = "1.0.23"

[dev-dependencies]
insta = "1.5.3"
simple_logger = "1.11.0"
